test/sematest/valid/identifier_system_in_scope.java
class System {

}

class A {
  public static void main(String[] args) {
    System a;
  }
}