test/sematest/invalid/main_method_call.java
class A {
  public static void main(String[] args) {
    main(args);
  }
}